# guck

./: CHANGELOG.md  Cargo.toml  README.md  TESTING.md  go.mod  go.sum  main.go  main_test.go
.github/workflows/: ci.yml
docs/: README.md
internal/cli/commands/: comments.go  notes.go
internal/cli/formatters/: formatters.go  formatters_test.go
internal/cli/helpers/: helpers.go  helpers_test.go
internal/config/: config.go
internal/export/: export.go  export_test.go
internal/git/: blob.go  blob_test.go  git.go  git_test.go
internal/mcp/: mcp.go  mcp_test.go  server.go
internal/server/: server.go
internal/server/static/: index.html
internal/state/: notes_test.go  state.go  state_test.go
src/: config.rs  daemon.rs  main.rs  server.rs  state.rs
static/: index.html
