[package]
name = "guck"
version = "0.1.0"
edition = "2021"
authors = ["Tuist Team"]
description = "A Git diff review tool with a web interface"
license = "MIT"

[[bin]]
name = "guck"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
anyhow = "1"
thiserror = "2"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
git2 = "0.19"
sha2 = "0.10"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["signal"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
